--- a/gateway_service/.env.development
+++ b/gateway_service/.env.development
@@ -1,3 +1,4 @@
 DATABASEURL=mongodb+srv://roshandevkota1997:gmxrctZN5wqXVMuc@cluster0.vw1nldl.mongodb.net/?retryWrites=true&w=majority
 DATABASENAME=gateway_db
 JWT=hkvhkkucf24hgvjy799797
+API_User=userapikey2024
