Chore: middleware added to add apikey in header

--- a/gateway_service/.env.development
+++ b/gateway_service/.env.development
@@ -1,4 +1,6 @@
 DATABASEURL=mongodb+srv://roshandevkota1997:gmxrctZN5wqXVMuc@cluster0.vw1nldl.mongodb.net/?retryWrites=true&w=majority
-DATABASENAME=gateway_db
+# DATABASENAME=gateway_db
+DATABASENAME=fantasy_league
 JWT=hkvhkkucf24hgvjy799797
-API_User=userapikey2024
+API_USER=userapikey2024
+API_MATCH=matchapikey2024
