chore: forget password and email connection done

--- a/server/.env.development
+++ b/server/.env.development
@@ -1,3 +1,4 @@
+PORT = 4000
 DATABASEURL=mongodb+srv://roshandevkota1997:gmxrctZN5wqXVMuc@cluster0.vw1nldl.mongodb.net/?retryWrites=true&w=majority
 DATABASENAME=fantasy_league
 JWT=hkvhkkucf24hgvjy799797
