--- a/gateway_service/.env.development
+++ b/gateway_service/.env.development
@@ -1,3 +1,4 @@
+PORT=5000
 DATABASEURL=mongodb+srv://roshandevkota1997:gmxrctZN5wqXVMuc@cluster0.vw1nldl.mongodb.net/?retryWrites=true&w=majority
 # DATABASENAME=gateway_db
 DATABASENAME=fantasy_league
@@ -5,3 +6,5 @@ JWT=hkvhkkucf24hgvjy799797
 API_USER=userapikey2024
 API_MATCH=matchapikey2024
 MSTYPE=gateway
+MSUSERURL=http://localhost
+MSUSERPORT=4000
