chore: forget and reset password completed

--- a/server/.env.development
+++ b/server/.env.development
@@ -1,4 +1,7 @@
 PORT = 4000
+GATEWAYPORT = 5000
+GATEWAYURL=http://localhost
+
 DATABASEURL=mongodb+srv://roshandevkota1997:gmxrctZN5wqXVMuc@cluster0.vw1nldl.mongodb.net/?retryWrites=true&w=majority
 DATABASENAME=fantasy_league
 JWT=hkvhkkucf24hgvjy799797
