--- a/match_services/package.json
+++ b/match_services/package.json
@@ -25,7 +25,9 @@
     "multer": "^1.4.5-lts.1",
     "typescript": "^5.2.2",
     "zod": "^3.22.4",
-    "zod-express-middleware": "^1.4.0"
+    "zod-express-middleware": "^1.4.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
@@ -39,6 +41,8 @@
     "@types/node": "^20.8.8",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
