--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/main.js",
+    "start": "node --env-file=.env.production dist/src/main.js",
     "dev": "nodemon"
   },
   "keywords": [],
